k8s/os/os-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: os
  name: os-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: os.cluster.local
      http:
        paths:
          - path: "/sonarr"
            pathType: Prefix
            backend:
              service:
                name: sonarr-service
                port:
                  number: 80
